<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verticalGL"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalGL"
        app:layout_constraintGuide_percent="0.35"
        android:orientation="horizontal"/>
    <TextView
        android:id="@+id/set1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set1"
        android:textSize="32sp"
        android:textColor="#000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/verticalGL"
        app:layout_constraintTop_toBottomOf="@+id/horizontalGL" />
    <TextView
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/verticalGL"
        app:layout_constraintTop_toBottomOf="@+id/set1" />
    <TextView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/verticalGL"
        app:layout_constraintTop_toBottomOf="@+id/create" />
    <TextView
        android:id="@+id/resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/verticalGL"
        app:layout_constraintTop_toBottomOf="@+id/start" />
    <TextView
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/verticalGL"
        app:layout_constraintTop_toBottomOf="@+id/resume" />
    <TextView
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set1"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/verticalGL"
        app:layout_constraintTop_toBottomOf="@+id/pause" />
    <TextView
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/verticalGL"
        app:layout_constraintTop_toBottomOf="@+id/stop" />
    <TextView
        android:id="@+id/destroy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destroy"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/verticalGL"
        app:layout_constraintTop_toBottomOf="@+id/restart" />




    <TextView
        android:id="@+id/set2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set2"
        android:textSize="32sp"
        android:textColor="#000"
        app:layout_constraintLeft_toLeftOf="@+id/verticalGL"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalGL" />
    <TextView
        android:id="@+id/create2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@+id/verticalGL"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set1" />
    <TextView
        android:id="@+id/start2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@+id/verticalGL"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create" />
    <TextView
        android:id="@+id/resume2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@+id/verticalGL"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start" />
    <TextView
        android:id="@+id/pause2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@+id/verticalGL"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resume" />
    <TextView
        android:id="@+id/stop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@+id/verticalGL"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pause" />
    <TextView
        android:id="@+id/restart2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@+id/verticalGL"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stop" />
    <TextView
        android:id="@+id/destroy2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destroy"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@+id/verticalGL"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restart" />

</androidx.constraintlayout.widget.ConstraintLayout>